Fixing layout issues

--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -178,13 +178,13 @@
     padding: 0;
     display: flex;
     width: 69.375rem;
-    background-size: 45rem;
-    background-position: left center;
+    background-size: 50rem;
+    background-position: left 1rem;
     overflow: hidden;
   }
   .zx9__image{
     max-width: unset;
-    width: 25.63963rem;
+    width: 24rem;
     margin: 6rem 0 -1rem 7.34rem;
   }
   .zx9__content{
